--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,9 @@ services:
         container_name: mariadb
         environment:
             MYSQL_ROOT_PASSWORD: root
-            MYSQL_DATABASE: dolibar_database
-            MYSQL_USER: dolibar_user
-            MYSQL_PASSWORD: dolibar_password
+            MYSQL_DATABASE: dolidb
+            MYSQL_USER: dolidbuser
+            MYSQL_PASSWORD: dolidbpass
 
         volumes:
             - /home/dolibarr_mariadb:/var/lib/mysql
@@ -15,20 +15,20 @@ services:
         image: dolibarr/dolibarr:latest
         container_name: dolibarr
         environment:
-            WWW_USER_ID: 1000
-            WWW_GROUP_ID: 1000
             DOLI_DB_HOST: mariadb
-            DOLI_DB_NAME: dolibar_database
-            DOLI_DB_USER: dolibar_databaseuser
-            DOLI_DB_PASSWORD: dolibar_password
+            DOLI_DB_NAME: dolidb
+            DOLI_DB_USER: dolidbuser
+            DOLI_DB_PASSWORD: dolidbpass
             DOLI_URL_ROOT: "http://0.0.0.0"
             DOLI_ADMIN_LOGIN: "admin"
             DOLI_ADMIN_PASSWORD: "admin"
             DOLI_CRON: 0
-            DOLI_INIT_DEMO: 0
+            #Import des données test (lors que le  paramètre est a 1)
+            DOLI_INIT_DEMO: 1
             DOLI_COMPANY_NAME: XXX-SAE51
+            DOLI_ENABLE_MODULES: Societe, Import
 
-        ports:
+        ports: 
             - "8085:80"
         links:
             - mariadb
